--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/SuperBeauty
-spring.datasource.username=postgres
-spring.datasource.password=senha
+#spring.datasource.url=jdbc:postgresql://localhost:5432/SuperBeauty
+#spring.datasource.username=postgres
+#spring.datasource.password=senha
 
 
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.format_sql=true
+
+#spring.liquibase.enabled=true
+#spring.liquibase.drop-first=false
+#spring.liquibase.change-log=classpath:db/master.xml
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+# config heroku
+spring.datasource.url = ${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.liquibase.enabled=true
-spring.liquibase.drop-first=false
-spring.liquibase.change-log=classpath:db/master.xml
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.jpa.generate-ddl=true
+# spring.mvc.pathmatch.matching-strategy=ant-path-matcher
