--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@
 spring.datasource.url = ${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-# spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
